--- a/3_linear_regression.Rmd
+++ b/3_linear_regression.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Linear Regresiion"
+title: "Linear Regression"
 author: "Valentine Savchenko"
 date: "July 3, 2016"
 output: html_document
@@ -17,9 +17,9 @@ set.seed(3741)
 Describe the null hypotheses to which the p-values given in Table 3.4 correspond. Explain what conclusions you can draw based on these p-values. Your explanation should be phrased in terms of sales, TV, radio, and newspaper, rather than in terms of the coefficients of the linear model.
 
 ```{r, verbose = F}
-download.file(url = "http://www-bcf.usc.edu/~gareth/ISL/Advertising.csv", destfile = "Advertising.csv")
+download.file(url = "http://faculty.marshall.usc.edu/gareth-james/ISL/Advertising.csv", destfile = "Advertising.csv")
 Advertising <- read.table(file = "Advertising.csv", header = T, sep =",")
-model <- lm(Sales ~ TV + Radio + Newspaper, data = Advertising)
+model <- lm(sales ~ TV + radio + newspaper, data = Advertising)
 summary(model)
 ```
 
